# TaskFlow

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  .secrets.baseline  CLAUDE.md  Makefile  README.md  biome.json  docker-compose.prod.yml  docker-compose.test.yml  docker-compose.yml  package.json  pnpm-lock.yaml  prompts.md  turbo.json
apps/api/: .dockerignore  Dockerfile  README.md  alembic.ini  entrypoint.sh  pyproject.toml
apps/api/taskflow/: constants.py  errors.py  logging_config.py  main.py  rate_limit.py  scheduler.py  settings.py
apps/api/taskflow/auth/: audit.py  csrf.py  dependencies.py  passwords.py  permissions.py  sessions.py  tokens.py
apps/api/taskflow/db/: session.py  uuid7.py
apps/api/taskflow/realtime/: __init__.py  after_commit.py  bus.py  channels.py  publish.py
apps/api/taskflow/schemas/: activity.py  auth.py  comments.py  dashboard.py  invitations.py  labels.py  members.py  notifications.py  projects.py  search.py  tasks.py  users.py  workspaces.py
apps/api/taskflow/scripts/: dump_openapi.py  seed.py
apps/api/taskflow/services/: _pagination.py  activity.py  auth.py  cleanup.py  comments.py  dashboard.py  emails.py  invitations.py  labels.py  members.py  mentions.py  notifications.py  project_access.py  projects.py  search.py  tasks.py  users.py  workspaces.py
apps/api/tests/: conftest.py
apps/api/tests/integration/: _helpers.py  conftest.py  test_activity_endpoints.py  test_audit_coverage.py  test_auth_endpoints.py  test_broadcaster_round_trip.py  test_cleanup_service.py  test_comment_endpoints.py  test_dashboard_endpoints.py  test_email_dispatch.py  test_invitation_endpoints.py  test_label_endpoints.py  test_log_emission.py  test_lookup_session.py  test_member_endpoints.py  test_migration_boot.py  test_notification_endpoints.py  test_project_access_endpoints.py  test_project_endpoints.py  test_rate_limits.py  test_search_endpoint.py  (+8 more)
(+442 files in other folders)
