[project]
name = "taskflow-api"
version = "0.0.0"
description = "TaskFlow FastAPI backend"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.5.0",
    "pydantic[email]>=2.9.0",
    "sqlalchemy[asyncio]>=2.0.36",
    "asyncpg>=0.30.0",
    "alembic>=1.13.0",
    "argon2-cffi>=23.1.0",
    "structlog>=24.4.0",
    "httpx>=0.27.0",
    "uuid-utils>=0.10.0",
    "broadcaster[postgres]>=0.3.1",
    "slowapi>=0.1.9",
]

[dependency-groups]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0.0",
    "mypy>=1.13.0",
    "ruff>=0.7.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["taskflow"]

[tool.uv]
package = true

[tool.ruff]
line-length = 100
target-version = "py312"
extend-exclude = ["taskflow/db/migrations/versions"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "N",   # pep8-naming
    "S",   # flake8-bandit
    "ASYNC",
]
ignore = ["S101"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S105", "S106"]

[tool.ruff.format]
quote-style = "double"

[tool.mypy]
python_version = "3.12"
strict = true
plugins = ["pydantic.mypy"]
exclude = ["taskflow/db/migrations/versions"]

[[tool.mypy.overrides]]
module = ["broadcaster", "broadcaster.*", "uuid_utils"]
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "requires_db: integration test that needs a live Postgres at TEST_DATABASE_URL — auto-skipped if unreachable",
]
